# jsonirobots.github.io

./: .buildinfo  README.md  buildsite.py  contact.html  evtol_v1.html  genindex.html  index.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  projects.html  pyproject.toml  resume.html  search.html  searchindex.js  testFoundation.html  thrust_stand.html  zerog.html
_sources/: contact.md  evtol_v1.ipynb  intro.md  zerog.ipynb
css/: styles.css  uikit.css
portfolio/: _config.yml  _toc.yml  contact.md
portfolio/_build/.doctrees/: contact.doctree  environment.pickle  evtol_v1.doctree  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree  thrust_stand.doctree  zerog.doctree
portfolio/_build/html/: .buildinfo  contact.html  evtol_v1.html  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js  thrust_stand.html  zerog.html
portfolio/_build/html/_sources/: evtol_v1.ipynb  thrust_stand.ipynb
portfolio/_build/jupyter_execute/: evtol_v1.ipynb  markdown-notebooks.ipynb  notebooks.ipynb  thrust_stand.ipynb  zerog.ipynb
