[tool.poetry]
name = "jsonirobots-github-io"
version = "0.1.0"
description = ""
authors = ["jatinsoni006 <32970092+jsonirobots@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "jsonirobots"}]

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^1.0.2"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
ghp-import = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
